--- a/package.json
+++ b/package.json
@@ -1,24 +1,39 @@
 {
   "name": "ordrio",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "The Ultimate eCommerce Business Solution",
+  "author": "dhunanyan",
+  "license": "MIT",
+  "repository": "git@github.com:dhunanyan/ordrio.git",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "next": "^14.2.14",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sass": "^1.79.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "@svgr/webpack": "^8.1.0",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-scroll": "^1.8.10",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^14.2.14",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "raw-loader": "^4.0.2",
+    "typescript": "^5.6.2"
   }
 }
