--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "framer-motion": "^11.11.17",
     "next": "^14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
