--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ordrio",
   "version": "1.0.0",
-  "description": "The Ultimate eCommerce Business Solution",
+  "description": "Ordrio: Next.js 14-based informational website for e-commerce solutions, featuring SCSS, TypeScript, and dynamic routing optimized for performance and scalability.",
   "author": "dhunanyan",
   "license": "MIT",
   "repository": "git@github.com:dhunanyan/ordrio.git",
